# tda-api

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  Makefile.sphinx  README.md  README.rst  functional_tests.py  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  everything-else.md  feature-request.md  feature_request.md  looking-for-help--.md
.github/workflows/: python.yml
contrib/oauth_server/: auth.py
discord-help-bot/: bot.py
discord_help_bot/: Dockerfile  README.rst  bot.py  config.yml  models.py  requirements.txt  state_db.sqlite
docs/: auth.rst  client.rst  conf.py  contrib.rst  contributing.rst  example.rst  getting-started.rst  help.rst  index.rst  order-builder.rst  order-templates.rst  orders.rst  schwab.rst  streaming.rst  util.rst
docs-source/: modules.rst  tda.rst
docs/_static/: sp500.txt
examples/: birthday_dividends.py  client_from_access_functions.py  get_quote.py
examples/async/: get_quote.py
examples/streaming/: mystreaming2.py  (+1 more)
scripts/: functional_tests.py  price_history_combos.py
source/: conf.py  index.rst
tda/: __init__.py  auth.py  client.py  debug.py  orders.py  streaming.py  utils.py  version.py
tdameritrade_api/: client.py
tests/: _utils.py  auth_test.py  client_test.py  contrib_test.py  debug_test.py  orders_test.py  streaming_test.py  test_auth.py  test_client.py  test_debug.py  test_orders.py  test_streaming.py  test_utils.py  token_lifecycle_test.py  utils.py  utils_test.py
(+75 files in other folders)
