[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[check-manifest]
ignore =
    tox.ini

[flake8]
exclude =
    tests/*
max-line-length = 80
max-complexity = 10

[tool:brunette]
line-length = 79
verbose = true
single-quotes = false

[tool:pytest]
python_files = *test*.py
testpaths = tests
norecursedirs=tda build dist docs htmlcov

[coverage:run]
branch = True

[coverage:report]
exclude_lines =
    pragma: no cover
    except ImportError
    def __repr__
    raise NotImplementedError
    raise DeprecationWarning
    deprecate
